fixed text alignment and layering

--- a/filmer.css
+++ b/filmer.css
@@ -154,34 +154,41 @@ h3{
   width: 200px;
   border: black;
   border-radius: 20px;
-    z-index: -1;
+  z-index: -1;
 }
 .imageContainer{
   overflow: hidden;
   display:inline-block;
-  margin-left: 140px;
   border-radius: 20px;
-  margin-top: 50px;
   z-index: -1;
+
 }
 .movieimage:hover{
   transform: scale(1.2);
 }
 .movietitle{
   font-family: 'Roboto' sans-serif;
-  margin-left: 140px;
-  margin-top: 30px;
+  margin-bottom: 60px;
+}
+.textContainer{
+  display: inline-block;
+  width: 50%;
+  margin-left: 40px;
+  position: absolute;
 }
 
+.contentContainer{
+  margin-top: 50px;
+  margin-left: 180px;
+  height: 40vh;
+}
 
 
 .moviedescribtion{
   font-family:'Roboto'sans-serif ;
-  margin-left: 140px;
-  margin-right: 500px;
-  margin-bottom: 40px;
   border: black;
   background-color:rgba(255, 255, 255, .10);
+  
 }
 
 h2{
